--- a/.github/workflows/main_waqqlyapp.yml
+++ b/.github/workflows/main_waqqlyapp.yml
@@ -1,4 +1,4 @@
-name: Azure Functions Deployment
+name: Deploy Azure Functions
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -22,8 +22,22 @@ jobs:
       - name: Build
         run: dotnet build --configuration Release ./MyFunctionApp/MyFunctionApp.csproj
 
+      - name: Run tests
+        run: dotnet test --no-build --verbosity normal
+
       - name: Publish
         run: dotnet publish --configuration Release --output ./MyFunctionApp/publish ./MyFunctionApp/MyFunctionApp.csproj
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '8.0.x'
 
       - name: Deploy to Azure Functions
         uses: Azure/functions-action@v1
